--- a/.babelrc
+++ b/.babelrc
@@ -1,7 +1,13 @@
 {
   "presets": [
   	["es2015", { "modules": false }], 
+  	"es2016",
   	"react"
-  	]
+  	],
+    "plugins": [
+        "transform-class-properties",
+        "transform-object-rest-spread",
+        "transform-decorators-legacy"
+    ]
 }
 
