--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
     "jsnext:main": "lib/index.js",
     "devtool": "source-map",
     "scripts": {
-        "build": "yarn run clean && yarn run build-ci",
-        "build-ci": "node_modules/.bin/webpack -p",
+        "build": "yarn run clean && yarn run build-umd && yarn run build-lib",
+        "build-umd": "node_modules/.bin/webpack -p",
         "build-lib": "./node_modules/.bin/cpx './src/{**/!(__tests__)/*,*}' lib && BABEL_ENV=npm NODE_ENV=production ./node_modules/.bin/babel lib -d lib",
         "clean": "rm -rf dist && rm -rf lib"
     },
