--- a/package.json
+++ b/package.json
@@ -19,6 +19,12 @@
         "clean": "rm -rf dist && rm -rf lib"
     },
     "dependencies": {
+        "swz-groupedbarchart-with-table": "git+ssh://git@github.com/dbhonsle/swz-groupedbarchart-table.git"
+    },
+    "devDependencies": {
+        "babel-cli": "^6.26.0",
+        "babel-core": "^6.26.0",
+        "babel-eslint": "^7.2.3",
         "babel-loader": "^7.1.2",
         "babel-plugin-transform-class-properties": "^6.24.1",
         "babel-plugin-transform-decorators-legacy": "^1.3.4",
@@ -26,32 +32,26 @@
         "babel-plugin-transform-require-ignore": "^0.1.1",
         "babel-plugin-transform-runtime": "^6.23.0",
         "babel-polyfill": "^6.26.0",
+        "babel-preset-es2015": "^6.24.1",
         "babel-preset-es2016": "^6.24.1",
+        "babel-preset-react": "^6.24.1",
         "babel-runtime": "^6.26.0",
         "cpx": "^1.5.0",
         "css-loader": "^0.28.7",
-        "node-sass": "^4.5.3",
-        "sass-loader": "^6.0.6",
-        "style-loader": "^0.18.2",
-        "swz-groupedbarchart-with-table": "git+ssh://git@github.com/dbhonsle/swz-groupedbarchart-table.git",
-        "webpack": "^3.5.5",
-        "webpack-dev-server": "^2.7.1"
-    },
-    "devDependencies": {
-        "babel-cli": "^6.26.0",
-        "babel-core": "^6.26.0",
-        "babel-eslint": "^7.2.3",
-        "babel-preset-es2015": "^6.24.1",
-        "babel-preset-react": "^6.24.1",
         "eslint": "^4.5.0",
         "eslint-plugin-import": "^2.7.0",
         "eslint-plugin-jsx-a11y": "^6.0.2",
         "eslint-plugin-react": "^7.3.0",
         "eslint-watch": "^3.1.2",
+        "node-sass": "^4.5.3",
         "polished": "^1.7.0",
         "prop-types": "^15.5.10",
         "react": "^15.6.1",
         "react-dom": "^15.6.1",
-        "styled-components": "^2.1.2"
+        "sass-loader": "^6.0.6",
+        "style-loader": "^0.18.2",
+        "styled-components": "^2.1.2",
+        "webpack": "^3.5.5",
+        "webpack-dev-server": "^2.7.1"
     }
 }
