--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "D3ChartwithTableWrapper",
+    "name": "d3chartwithtablewrapper",
     "version": "0.3.0",
     "private": false,
     "description": "Grouped BarChart with Table UI Element",
@@ -20,8 +20,7 @@
         "styleguide-static": "REACT=true BABEL_ENV=production NODE_ENV=production node --max_old_space_size=8192 node_modules/react-styleguidist/bin/styleguidist.js build --config ./styleguide.config.js --mode production"
     },
     "dependencies": {
-        "d3": "^5.7.0",
-        "react-styleguidist": "^7.3.0"
+        "d3": "^5.7.0"
     },
     "devDependencies": {
         "autoprefixer": "^9.1.3",
@@ -55,6 +54,7 @@
         "prop-types": "^15.5.10",
         "react": "^15.6.1",
         "react-dom": "^15.6.1",
+        "react-styleguidist": "^7.3.0",
         "sass-loader": "^6.0.6",
         "style-loader": "^0.18.2",
         "styled-components": "^2.1.2",
