--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
         "build-umd": "node_modules/.bin/webpack -p --progress --colors",
         "build-lib": "./node_modules/.bin/cpx './src/{**/!(__tests__)/*,*}' lib && BABEL_ENV=npm NODE_ENV=production ./node_modules/.bin/babel lib -d lib",
         "clean": "rm -rf dist && rm -rf lib",
-        "styleguide-static": "REACT=true BABEL_ENV=production NODE_ENV=production node --max_old_space_size=8192 node_modules/react-styleguidist/bin/styleguidist.js build --config ./styleguide.config.js --mode production"
+        "styleguide-static": "REACT=true BABEL_ENV=production NODE_ENV=production node --max_old_space_size=8192 node_modules/react-styleguidist/bin/styleguidist.js build --config ./styleguide.config.js --mode production",
+        "prettier": "prettier-eslint --print-width 120 --tab-width 4 --single-quote --semi --write --bracket-spacing true \"src/**/*.js\""
     },
     "dependencies": {
-        "d3": "^5.7.0"
+        "d3": "^5.7.0",
+        "prettier-eslint": "^8.8.2"
     },
     "devDependencies": {
         "autoprefixer": "^9.1.3",
@@ -51,6 +53,7 @@
         "polished": "^1.7.0",
         "postcss-loader": "^3.0.0",
         "postcss-safe-parser": "^4.0.1",
+        "prettier-eslint-cli": "^4.7.1",
         "prop-types": "^15.5.10",
         "react": "^15.6.1",
         "react-dom": "^15.6.1",
