--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "d3chartwithtablewrapper",
-    "version": "0.4.0",
+    "version": "0.4.1",
     "private": false,
     "description": "Grouped BarChart with Table UI Element",
     "author": "Swz (https://www.springwiz.com/)",
@@ -13,8 +13,10 @@
     "module": "lib/index.js",
     "devtool": "source-map",
     "scripts": {
-        "build": "yarn run clean && yarn run build-umd && yarn run build-lib",
-        "build-umd": "node_modules/.bin/webpack -p --progress --colors",
+        "build": "yarn run clean && yarn run build-production && yarn run build-lib",
+        "build-interactive": "yarn run clean && yarn run build-dev",
+        "build-dev": "BABEL_ENV=dev NODE_ENV=dev webpack --progress --colors --mode development",
+        "build-production": "BABEL_ENV=production NODE_ENV=production node_modules/.bin/webpack --mode production",
         "build-lib": "./node_modules/.bin/cpx './src/{**/!(__tests__)/*,*}' lib && BABEL_ENV=npm NODE_ENV=production ./node_modules/.bin/babel lib -d lib",
         "clean": "rm -rf dist && rm -rf lib",
         "styleguide-static": "REACT=true BABEL_ENV=production NODE_ENV=production node --max_old_space_size=8192 node_modules/react-styleguidist/bin/styleguidist.js build --config ./styleguide.config.js --mode production",
