--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "d3chartwithtablewrapper",
-    "version": "0.4.2",
+    "version": "0.4.3",
     "private": false,
     "description": "Grouped BarChart with Table UI Element",
     "author": "Swz (https://www.springwiz.com/)",
@@ -22,9 +22,6 @@
         "styleguide-static": "REACT=true BABEL_ENV=production NODE_ENV=production node --max_old_space_size=8192 node_modules/react-styleguidist/bin/styleguidist.js build --config ./styleguide.config.js --mode production",
         "prettier": "prettier-eslint --print-width 120 --tab-width 4 --single-quote --semi --write --bracket-spacing true \"src/**/*.js\""
     },
-    "dependencies": {
-        "d3": "^5.7.0"
-    },
     "devDependencies": {
         "autoprefixer": "^9.1.3",
         "babel-cli": "^6.26.0",
@@ -42,6 +39,7 @@
         "babel-preset-react": "^6.24.1",
         "babel-runtime": "^6.26.0",
         "cpx": "^1.5.0",
+        "d3": "^5.7.0",
         "css-loader": "^0.28.7",
         "eslint": "^4.5.0",
         "eslint-plugin-import": "^2.7.0",
@@ -65,5 +63,10 @@
         "webpack": "^4.17.1",
         "webpack-cli": "^3.1.0",
         "webpack-dev-server": "^3.1.6"
+    },
+    "peerDependencies": {
+        "d3": "^5.7.0",
+        "react": "^15.6.1",
+        "react-dom": "^15.6.1"
     }
 }
