--- a/package.json
+++ b/package.json
@@ -22,6 +22,9 @@
         "styleguide-static": "REACT=true BABEL_ENV=production NODE_ENV=production node --max_old_space_size=8192 node_modules/react-styleguidist/bin/styleguidist.js build --config ./styleguide.config.js --mode production",
         "prettier": "prettier-eslint --print-width 120 --tab-width 4 --single-quote --semi --write --bracket-spacing true \"src/**/*.js\""
     },
+    "dependencies": {
+        "d3": "^5.7.0"
+    },
     "devDependencies": {
         "autoprefixer": "^9.1.3",
         "babel-cli": "^6.26.0",
@@ -65,7 +68,6 @@
         "webpack-dev-server": "^3.1.6"
     },
     "peerDependencies": {
-        "d3": "^5.7.0",
         "react": "^15.6.0",
         "react-dom": "^15.6.0"
     }
