--- a/package.json
+++ b/package.json
@@ -68,7 +68,7 @@
         "webpack-dev-server": "^3.1.6"
     },
     "peerDependencies": {
-        "react": "^15.6.0",
-        "react-dom": "^15.6.0"
+        "react": "15 || 16",
+        "react-dom": "15 || 16"
     }
 }
