--- a/.babelrc
+++ b/.babelrc
@@ -33,7 +33,12 @@
       "plugins": [
         "transform-class-properties",
         "transform-object-rest-spread",
-        "transform-decorators-legacy"
+        "transform-decorators-legacy",
+        [
+          "babel-plugin-transform-require-ignore", {
+              "extensions": [".scss", ".css"]
+          }
+        ]
       ]
     }
   }
