--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "d3chartwithtablewrapper",
-    "version": "0.4.8",
+    "version": "0.4.9",
     "private": false,
     "description": "Grouped BarChart with Table UI Element",
     "author": "Swz (https://www.springwiz.com/)",
@@ -27,23 +27,20 @@
         "d3": "^5.7.0"
     },
     "devDependencies": {
+        "@babel/cli": "^7.0.0",
+        "@babel/core": "^7.0.0",
+        "@babel/plugin-proposal-class-properties": "^7.0.0",
+        "@babel/plugin-proposal-decorators": "^7.0.0",
+        "@babel/plugin-proposal-object-rest-spread": "^7.0.0",
+        "@babel/preset-env": "^7.0.0",
+        "@babel/preset-react": "^7.0.0",
         "autoprefixer": "^9.1.3",
-        "babel-cli": "^6.26.0",
-        "babel-core": "^6.26.0",
+        "babel-core": "7.0.0-bridge.0",
         "babel-eslint": "^7.2.3",
-        "babel-loader": "^7.1.2",
-        "babel-plugin-transform-class-properties": "^6.24.1",
-        "babel-plugin-transform-decorators-legacy": "^1.3.4",
-        "babel-plugin-transform-object-rest-spread": "^6.26.0",
+        "babel-loader": "^8.0.0",
         "babel-plugin-transform-require-ignore": "^0.1.1",
-        "babel-plugin-transform-runtime": "^6.23.0",
-        "babel-polyfill": "^6.26.0",
-        "babel-preset-es2015": "^6.24.1",
-        "babel-preset-es2016": "^6.24.1",
-        "babel-preset-react": "^6.24.1",
-        "babel-runtime": "^6.26.0",
         "cpx": "^1.5.0",
-        "css-loader": "^0.28.7",
+        "css-loader": "^1.0.0",
         "d3": "^5.7.0",
         "eslint": "^4.5.0",
         "eslint-plugin-import": "^2.7.0",
@@ -51,25 +48,24 @@
         "eslint-plugin-react": "^7.3.0",
         "eslint-watch": "^3.1.2",
         "mini-css-extract-plugin": "^0.4.2",
-        "node-sass": "^4.5.3",
-        "optimize-css-assets-webpack-plugin": "^5.0.0",
-        "polished": "^1.7.0",
+        "node-sass": "^4.9.3",
+        "optimize-css-assets-webpack-plugin": "^5.0.1",
+        "polished": "^2.0.3",
         "postcss-loader": "^3.0.0",
         "postcss-safe-parser": "^4.0.1",
         "prettier-eslint-cli": "^4.7.1",
-        "prop-types": "^15.5.10",
-        "react": "^15.6.1",
-        "react-dom": "^15.6.1",
+        "prop-types": "^15.6.2",
+        "react": "^16.4.2",
+        "react-dom": "^16.4.2",
         "react-styleguidist": "^7.3.0",
-        "sass-loader": "^6.0.6",
-        "style-loader": "^0.18.2",
+        "sass-loader": "^7.1.0",
         "styled-components": "^2.1.2",
         "webpack": "^4.17.1",
         "webpack-cli": "^3.1.0",
         "webpack-dev-server": "^3.1.6"
     },
     "peerDependencies": {
-        "react": "15 || 16",
-        "react-dom": "15 || 16"
+        "react": "^16.4.2",
+        "react-dom": "^16.4.2"
     }
 }
