--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "d3chartwithtablewrapper",
-    "version": "0.4.11",
+    "version": "0.4.12",
     "private": false,
     "description": "Grouped BarChart with Table UI Element",
     "author": "Swz (https://www.springwiz.com/)",
@@ -24,7 +24,9 @@
         "prettier": "prettier-eslint --print-width 120 --tab-width 4 --single-quote --semi --write --bracket-spacing true \"src/**/*.js\""
     },
     "dependencies": {
-        "d3": "^5.7.0"
+        "d3": "^5.7.0",
+        "lodash": "^4.17.10",
+        "react-measure": "^2.1.2"
     },
     "devDependencies": {
         "@babel/cli": "^7.0.0",
